SE signal tumor and cells NMF

--- a/scripts/figure2/figure2a_tumor_ChIPseq_NMF.Rmd
+++ b/scripts/figure2/figure2a_tumor_ChIPseq_NMF.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Non-Negative Matrix Factorization (NMF) report"
+title: "Figure 2a"
 author: "Health Data Science Unit"
 date: "`r date()`"
 output: 
